<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailsActivity">

    <ImageView
        android:id="@+id/iv_bg"
        android:foreground="#4DE4E2E2"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/im_rick_and_morty_0"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="220dp"/>

    <ImageView
        android:id="@+id/iv_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_back"
        app:tint="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_width="40dp"
        android:layout_height="40dp"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_profile"
        app:layout_constraintTop_toBottomOf="@id/iv_bg"
        app:layout_constraintBottom_toBottomOf="@id/iv_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:shapeAppearanceOverlay="@style/circle"
        android:src="@android:color/darker_gray"
        android:padding="8dp"
        app:strokeColor="@color/white"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintDimensionRatio="H, 1:1"
        app:strokeWidth="8dp"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        android:text="@string/str_space"
        android:textStyle="bold"
        android:textSize="27sp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_status"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        android:text="@string/str_space"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginStart="16dp"
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/str_gender"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_gender"
                    android:text="@string/str_space"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/str_species"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_species"
                    android:text="@string/str_space"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/str_origin_location"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_origin_location"
                android:text="@string/str_space"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/str_location"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_location"
                android:text="@string/str_space"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_progress"
        android:visibility="gone"
        android:background="#D78E8A8A"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>